feat(*): add hasTrack and add strokeSize

--- a/website/sdds-netology-docs/docs/components/ProgressBarCircular.mdx
+++ b/website/sdds-netology-docs/docs/components/ProgressBarCircular.mdx
@@ -143,10 +143,10 @@ import { ProgressBarCircular } from '@salutejs/sdds-netology';
 export function App() {
     return (
         <div style={{ display: 'flex', alignItems: 'center', gap: '1rem', flexWrap: 'wrap' }}>
-            <ProgressBarCircular value={50} strokeWidth={2} />
-            <ProgressBarCircular value={50} strokeWidth={4} />
-            <ProgressBarCircular value={50} strokeWidth={8} />
-            <ProgressBarCircular value={50} strokeWidth={12} />
+            <ProgressBarCircular value={50} strokeSize={2} />
+            <ProgressBarCircular value={50} strokeSize={4} />
+            <ProgressBarCircular value={50} strokeSize={8} />
+            <ProgressBarCircular value={50} strokeSize={12} />
         </div>
     );
 }
