--- a/website/plasma-web-docs/docs/components/PreviewGallery.mdx
+++ b/website/plasma-web-docs/docs/components/PreviewGallery.mdx
@@ -9,6 +9,10 @@ import { PropsTable, Description, StorybookLink, Badge } from '@site/src/compone
 
 <Badge />
 
+:::caution
+Компонент не поддерживает React 19.
+:::
+
 <Description name="PreviewGallery" />
 <PropsTable name="PreviewGallery" />
 <StorybookLink name="PreviewGallery" />
