docs(*): add docs

--- a/website/plasma-b2c-docs/docs/functions/mixins.mdx
+++ b/website/plasma-b2c-docs/docs/functions/mixins.mdx
@@ -103,3 +103,27 @@ import { applyPaper } from '@salutejs/plasma-b2c';
     Test card
 </div>
 ```
+
+
+## `addScrollbar`
+
+:::caution
+Стилизация системного scrollbar возможна **только** в браузерах: Safari, Chrome и на базе Chromium!
+:::
+
+Позволяет изменить внешний вид системного scrollbar согласно цветовым токенам темы.
+
+###
+```tsx
+import { addScrollbar } from '@salutejs/plasma-b2c';
+
+type Size = 's' | 'm';
+
+const ScrollbarContainer = styled.div`
+    ${addScrollbar('s')};
+`;
+
+<ScrollbarContainer>
+    { children }
+</ScrollbarContainer>
+```
