--- a/website/plasma-web-docs/docs/functions/mixins.mdx
+++ b/website/plasma-web-docs/docs/functions/mixins.mdx
@@ -151,3 +151,26 @@ import { applyPaper } from '@salutejs/plasma-web';
     Test card
 </div>
 ```
+
+## `addScrollbar`
+
+:::caution
+Стилизация системного scrollbar возможна **только** в браузерах: Safari, Chrome и на базе Chromium!
+:::
+
+Позволяет изменить внешний вид системного scrollbar согласно цветовым токенам темы.
+
+###
+```tsx
+import { addScrollbar } from '@salutejs/plasma-web';
+
+type Size = 's' | 'm';
+
+const ScrollbarContainer = styled.div`
+    ${addScrollbar('s')};
+`;
+
+<ScrollbarContainer>
+    { children }
+</ScrollbarContainer>
+```
