--- a/website/sdds-netology-docs/docs/utils/mixins.mdx
+++ b/website/sdds-netology-docs/docs/utils/mixins.mdx
@@ -33,3 +33,27 @@ import { applyPaper } from '@salutejs/sdds-netology';
     Test card
 </div>
 ```
+
+
+## `addScrollbar`
+
+:::caution
+Стилизация системного scrollbar возможна **только** в браузерах: Safari, Chrome и на базе Chromium!
+:::
+
+Позволяет изменить внешний вид системного scrollbar согласно цветовым токенам темы.
+
+###
+```tsx
+import { addScrollbar } from '@salutejs/sdds-netology';
+
+type Size = 's' | 'm';
+
+const ScrollbarContainer = styled.div`
+    ${addScrollbar('s')};
+`;
+
+<ScrollbarContainer>
+    { children }
+</ScrollbarContainer>
+```
