--- a/website/sdds-scan-docs/docs/utils/mixins.mdx
+++ b/website/sdds-scan-docs/docs/utils/mixins.mdx
@@ -19,7 +19,7 @@ title: Миксины
 import { applyPaper } from '@salutejs/sdds-scan';
 
 <div
-    style=\{applyPaper({
+    style={applyPaper({
         backgroundColor: 'surfaceAccent',
         borderRadius: 'borderRadiusM',
         shadow: 'shadowDownHardM',
@@ -32,4 +32,27 @@ import { applyPaper } from '@salutejs/sdds-scan';
 >
     Test card
 </div>
+```
+
+## `addScrollbar`
+
+:::caution
+Стилизация системного scrollbar возможна **только** в браузерах: Safari, Chrome и на базе Chromium!
+:::
+
+Позволяет изменить внешний вид системного scrollbar согласно цветовым токенам темы.
+
+###
+```tsx
+import { addScrollbar } from '@salutejs/sdds-scan';
+
+type Size = 's' | 'm';
+
+const ScrollbarContainer = styled.div`
+    ${addScrollbar('s')};
+`;
+
+<ScrollbarContainer>
+    { children }
+</ScrollbarContainer>
 ```
